--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Efeito Explosão</title>
 </head>
 <body>
-    
+    <p id="time">Countdown</p>
+    <img src="/assets/img/xm.png" alt="Countdown" id="fire" onclick="xequeMate()">
     <script src="explosao.js"></script>
 </body>
 </html>
